# qt-google-analytics

./: .gitignore  CMakeLists.txt  README.md  ganalytics.cpp  ganalytics.h  qt-google-analytics.pri  qt-google-analytics.pro
examples/console-app/: main.cpp
examples/qtquick-app/: MainWindow.qml  main.cpp
include/: ganalytics.h
src/: ganalytics.cpp  ganalytics_worker.cpp
